--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -17,20 +17,9 @@
     "app.*",
     "os.*",
     "debug.log",
-    "filesystem.readDirectory"
+    "filesystem.*"
   ],
-  "globalVariables": {
-    "TEST1": "Hello",
-    "TEST2": [
-      2,
-      4,
-      5
-    ],
-    "TEST3": {
-      "value1": 10,
-      "value2": {}
-    }
-  },
+  "globalVariables": {},
   "modes": {
     "window": {
       "title": "Virus Launcher",
@@ -50,9 +39,7 @@
       "exitProcessOnClose": false
     },
     "browser": {
-      "globalVariables": {
-        "TEST": "Test value browser"
-      },
+      "globalVariables": {},
       "nativeBlockList": [
         "filesystem.*"
       ]
