--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "localize": "ng extract-i18n --format=json",
     "neu-run": "ng build --base-href ./ && neu run",
     "neu-build": "ng build --base-href ./ && neu build",
-    "neu-update": "neu update"
+    "neu-update": "neu update",
+    "neu-set-icon": "resedit dist/virus-launcher/virus-launcher-win_x64.exe dist/virus-launcher/virus-launcher-win_x64-with-icon.exe --icon 1,resources/icon.ico"
   },
   "private": true,
   "devDependencies": {
@@ -42,6 +43,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "patch-package": "^8.0.0",
+    "resedit-cli": "^2.0.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "typescript": "~5.3.3",
