--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -32,7 +32,7 @@
       "fullScreen": false,
       "alwaysOnTop": false,
       "icon": "/resources/icon.png",
-      "enableInspector": true,
+      "enableInspector": false,
       "borderless": false,
       "maximize": false,
       "hidden": false,
