--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@types/jasmine": "~5.1.2",
+    "@zip.js/zip.js": "^2.7.34",
     "jasmine-core": "~5.1.2",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
