--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "neu-run": "ng build --base-href ./ && neu run",
     "neu-build": "ng build --base-href ./ && neu build",
     "neu-update": "neu update",
-    "neu-set-icon": "resedit dist/virus-launcher/virus-launcher-win_x64.exe dist/virus-launcher/virus-launcher-win_x64-with-icon.exe --icon 1,resources/icon.ico"
+    "neu-set-icon": "resedit dist/virus-launcher/virus-launcher-win_x64.exe dist/virus-launcher/virus-launcher-win_x64-with-icon.exe --icon 1,resources/icon.ico --sign --pfx cert/certificate.pfx --password \"\""
   },
   "private": true,
   "devDependencies": {
